<!-- strings.xml -->
<resources>
    <string name="app_name">IvliPass</string>
    <string name="title_generation">Generation</string>
    <string name="title_saved">Saved</string>
    <string name="title_check">Check</string>
    <string name="username">Username</string>
    <string name="password_strength">Password Strength:</string>
    <string name="enter_password_to_check">Enter password to check</string>
    <string name="generated_password">Generated Password</string>
    <string name="service">Service</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="include_special_symbols">Include Special Symbols</string>
    <string name="generate_password">Generate Password</string>
    <string name="save_password">Save Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="search_service_or_email">Search Service or Email</string>
    <string name="service_google">Service: Google</string>
    <string name="email_user_example_com">Email: user@example.com</string>
    <string name="passwordMega">Password: ***********</string>
    <string name="password_length_min">Password Length: %1$d</string>
    <string name="password_length_16">Password Length: 16</string>
    <string name="password_length">Password length: %1$d</string>
    <string name="password_saved_success">Password saved successfully</string>
    <string name="service_password_empty">Service and password cannot be empty</string>
    <!-- New Strings for Dialog -->
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>/>
</resources>
