<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.generation.GenerationFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/generated_password"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_optional" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/specialSymbolsCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/include_special_symbols" />

        <SeekBar
            android:id="@+id/passwordLengthSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:progress="8" />

        <TextView
            android:id="@+id/passwordLengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_length_8" />

        <Button
            android:id="@+id/generatePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_password" />

        <Button
            android:id="@+id/savePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
