<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="Login">
        <!-- Действие для перехода к HomeFragment -->
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@layout/fragment_generation" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.GenerationFragment"
        android:label="@string/title_generation"
        tools:layout="@layout/fragment_generation" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.CheckFragment"
        android:label="@string/title_check"
        tools:layout="@layout/fragment_check" />
</navigation>